cabal-version: 2.4
name: rustls
version: 0.0.1.0

synopsis: TLS bindings for Rustls
description:
  TLS bindings for [Rustls](https://github.com/rustls/rustls)
  via [rustls-ffi](https://github.com/rustls/rustls-ffi).
category: Cryptography, Network

author: amesgen
maintainer: amesgen@amesgen.de
homepage: https://github.com/amesgen/hs-rustls/tree/main/rustls
bug-reports: https://github.com/amesgen/hs-rustls/issues
license: CC0-1.0
license-file: LICENSE

extra-source-files:
  cbits/hs_rustls.h
  README.md
  CHANGELOG.md

source-repository head
  location: https://github.com/amesgen/hs-rustls
  type: git

common commons
  default-language: GHC2021
  ghc-options: -Wall -Wredundant-constraints -Wunused-packages -Wno-name-shadowing -Wno-unticked-promoted-constructors -fhide-source-paths
  default-extensions: BlockArguments CApiFFI CPP DataKinds DeriveAnyClass DerivingStrategies LambdaCase MultiWayIf OverloadedStrings PatternSynonyms RecordWildCards RoleAnnotations StrictData ViewPatterns

library
  import: commons
  ghc-options: -Wmissing-export-lists
  hs-source-dirs: src
  exposed-modules:
    Rustls
    Rustls.Internal
    Rustls.Internal.FFI
  build-depends:
      base >= 4.16 && < 5
    , bytestring >= 0.10 && < 0.13
    , text >= 2.0 && < 2.2
    , derive-storable ^>= 0.3
    , transformers >= 0.5.6 && < 0.7
    , resourcet ^>= 1.2 || ^>= 1.3
    , network ^>= 3.1
  extra-libraries: rustls
  include-dirs: cbits

test-suite tasty
  import: commons
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , rustls
    , tasty >= 1.3 && < 1.6
    , tasty-hunit ^>= 0.10
    , tasty-hedgehog >= 1.0 && < 1.5
    , hedgehog >= 1.0 && < 1.5
    , text
    , bytestring
    , containers >= 0.6 && < 0.8
    , transformers
    , resourcet
    , async ^>= 2.2
    , stm ^>= 2.5
    , process ^>= 1.6
    , filepath >= 1.4 && < 1.6
    , directory ^>= 1.3
    , temporary ^>= 1.3
